--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!------------------------------------------------------->
-                    <!--Navbar section start  -->
+        <!--Navbar section start  -->
         <!------------------------------------------------------->
         <header>
             <nav class="nav-container">
@@ -24,12 +24,28 @@
                     <li><a href>Contact</a></li>
                 </ul>
             </nav>
+            <section class="banner-container">
+                <div class="banner">
+                    <div class="banner-left">
+                        <h1>Cartoons And Anime Series Stream Anytime On Cosmic
+                            World</h1>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Neque dolore beatae illum illo aspernatur
+                            cumque ipsam accusamus amet ex aut.</p>
+                        <button class="btn-primary">Browse Now</button>
+                    </div>
+                    <div class="banner-right">
+                        <img src="./images/about.png" alt>
+                    </div>
+                </div>
+            </section>
+            <!-------Banner section end------->
         </header>
         <!------------------------------------------------------->
-                    <!--Navbar section end  -->
+        <!--Navbar section end  -->
         <!------------------------------------------------------->
         <!------------------------------------------------------->
-                    <!--Navbar section start  -->
+        <!--Navbar section start  -->
         <!------------------------------------------------------->
     </body>
 </html>
