about  section code

--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Document</title>
+        <script src="https://kit.fontawesome.com/6d8df29ca2.js"
+            crossorigin="anonymous"></script>
         <link rel="stylesheet" href="./style/style.css">
     </head>
+
     <body>
         <!------------------------------------------------------->
         <!--Navbar section start  -->
         <!------------------------------------------------------->
         <header>
-            <nav class="nav-container">
+            <nav class="container">
                 <div class="logo">
                     <img src="./images/logo.png" alt>
                 </div>
@@ -24,11 +28,13 @@
                     <li><a href>Contact</a></li>
                 </ul>
             </nav>
-            <section class="banner-container">
+            <!--Banner section start  -->
+            <section class="container">
                 <div class="banner">
                     <div class="banner-left">
-                        <h1>Cartoons And Anime Series Stream Anytime On Cosmic
-                            World</h1>
+                        <h1>Cartoons And Anime Series Stream Anytime On <span
+                                class="primary">Cosmic
+                                World</span></h1>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing
                             elit. Neque dolore beatae illum illo aspernatur
                             cumque ipsam accusamus amet ex aut.</p>
@@ -44,8 +50,95 @@
         <!------------------------------------------------------->
         <!--Navbar section end  -->
         <!------------------------------------------------------->
-        <!------------------------------------------------------->
-        <!--Navbar section start  -->
-        <!------------------------------------------------------->
+        <main class="container">
+            <!------------------------------------------------------->
+            <!--Feature section start  -->
+            <!------------------------------------------------------->
+            <section id="feature">
+                <div class="section-title">
+                    <h2>Fea<span class="primary">t</span>ure</h2>
+                </div>
+                <div class="feature">
+                    <div class="card">
+                        <i class="card-icon fa-solid fa-book"></i>
+                        <h2 class="primary">Creative Story</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Corporis impedit numquam mollitia sequi esse
+                            veniam veritatis modi blanditiis temporibus
+                            alias.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="card">
+                        <i class="card-icon fa-solid fa-video"></i>
+                        <h2 class="primary">4k Suppor</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Corporis impedit numquam mollitia sequi esse
+                            veniam veritatis modi blanditiis temporibus
+                            alias.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="card">
+                        <i class="card-icon fa-solid fa-star"></i>
+                        <h2 class="primary">Super Quality</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Corporis impedit numquam mollitia sequi esse
+                            veniam veritatis modi blanditiis temporibus
+                            alias.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                    <div class="card">
+                        <i class="card-icon fa-solid fa-lock"></i>
+                        <h2 class="primary">Highly Secured</h2>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Corporis impedit numquam mollitia sequi esse
+                            veniam veritatis modi blanditiis temporibus
+                            alias.</p>
+                        <a href="#">Read More</a>
+                    </div>
+                </div>
+            </section>
+            <!------------------------------------------------------->
+            <!--Feature section start  -->
+            <!------------------------------------------------------->
+            <!------------------------------------------------------->
+            <!--About section start  -->
+            <!------------------------------------------------------->
+            <section>
+                <div class="section-title">
+                    <h2><span class="primary">Animation</span> Studio
+                        Present</h2>
+                </div>
+                <div id="about">
+                    <div class="about">
+                        <div class="about-left">
+                            <img src="./images/about.png" alt>
+                        </div>
+                        <div class="about-right">
+                            <h1>Cartoons And Anime Series Stream Anytime On
+                                <span class="primary">Cosmic
+                                    World</span></h1>
+                            <p>Lorem ipsum dolor sit amet, consectetur
+                                adipisicing
+                                elit.
+                                Quibusdam ipsum aperiam amet explicabo illo
+                                sequi
+                                itaque
+                                assumenda, maxime quidem perspiciatis molestias
+                                ipsa
+                                rem
+                                officiis temporibus autem quia laboriosam?
+                                Accusamus,
+                                excepturi?</p>
+                                <button class="btn-primary">Browse Now</button>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!------------------------------------------------------->
+            <!--About section end  -->
+            <!------------------------------------------------------->
+        </main>
+
     </body>
+
 </html>
