cosmic world project

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
                 <div class="logo">
                     <img src="./images/logo.png" alt>
                 </div>
+                <!-- Nav toggler -->
+                <input type="checkbox" name="" id="nav-toggler">
+                <label class="nav-toggler-icon" for="nav-toggler">
+                    <i class="card-icon fas fa-bars"></i>
+                </label>
                 <!-- ul.navigation>li*5>a -->
                 <ul class="navigation">
                     <li><a href="#">Home</a></li>
@@ -103,7 +108,7 @@
             <!------------------------------------------------------->
             <!--About section start  -->
             <!------------------------------------------------------->
-            <section>
+            <section id="about2">
                 <div class="section-title">
                     <h2><span class="primary">Animation</span> Studio
                         Present</h2>
@@ -129,7 +134,7 @@
                                 officiis temporibus autem quia laboriosam?
                                 Accusamus,
                                 excepturi?</p>
-                                <button class="btn-primary">Browse Now</button>
+                            <button class="btn-primary">Browse Now</button>
                         </div>
                     </div>
                 </div>
@@ -137,6 +142,53 @@
             <!------------------------------------------------------->
             <!--About section end  -->
             <!------------------------------------------------------->
+            <!------------------------------------------------------->
+            <!--Gallery section start  -->
+            <!------------------------------------------------------->
+            <section class="gallery">
+                <div class="section-title">
+                    <h2>Gall<span class="primary">e</span>ry</h2>
+                </div>
+                <div class="gallery-container">
+                        <img src="./images/images (6).jpg" alt="">
+                        <img src="./images/images (2).jpg" alt="">
+                        <img src="./images/images (4).jpg" alt="">
+                        <img src="./images/images (5).jpg" alt="">
+                        <img src="./images/meena.jpg" alt="">
+                        <img src="./images/jumanji.jpg" alt="">
+                </div>
+            </section>
+            <!------------------------------------------------------->
+            <!--Gallery section end  -->
+            <!------------------------------------------------------->
+            <!------------------------------------------------------->
+            <!--Contact section start  -->
+            <!------------------------------------------------------->
+            <section id="contact">
+                <div class="section-title">
+                    <h2>Con<span class="primary">n</span>tact</h2>
+                </div>
+                <div class="contact">
+                    <div class="left-contact">
+                        <img src="./images/contact.png" alt="">
+                    </div>
+                    <div class="right-contact">
+                        <form>
+                            <input type="text" placeholder="Your name" class="text-field">
+                            <input type="text" placeholder="Your Email" class="text-field">
+                            <textarea placeholder="Text area" name="" id="" cols="30" rows="10" class="text-field"></textarea>
+                            <button class="btn-primary">Submit</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
+            <!--Contact section end  -->
+            <!------------------------------------------------------->
+            <!--Footer section start  -->
+            <!------------------------------------------------------->
+            <footer>
+                <small>Copyright &copy; all right reserved by <span style="color: #FF008E">Cosmic World.</span></small>
+            </footer>
         </main>
 
     </body>
